feat: :sparkles: Finished gRPC implementation
Finished gRPC implementation the microservice get a string from the gateway that talk to him through grpc and suppose to return Hello NestJS

--- a/apps/sample-microservice/project.json
+++ b/apps/sample-microservice/project.json
@@ -6,9 +6,17 @@
   "targets": {
     "build": {
       "executor": "nx:run-commands",
+
       "options": {
         "command": "webpack-cli build",
-        "args": ["node-env=production"]
+        "args": ["node-env=production"],
+        "assets": [
+          {
+            "input": "apps/sample-microservice/proto",
+            "glob": "**/*.proto",
+            "output": "proto"
+          }
+        ]
       },
       "configurations": {
         "development": {
