--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.5",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
